progressive-delivery-demo/manifests/canary-demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: canary-demo
  name: canary-demo
spec:
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: canary-demo
  template:
    metadata:
      labels:
        app: canary-demo
    spec:
      containers:
      - image: quay.io/andrleite/rollouts-demo:orange
        imagePullPolicy: Always
        name: canary-demo
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: 5m
            memory: 32Mi
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mesh
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - canary.demo
    port:
      name: http
      number: 80
      protocol: HTTP
