progressive-delivery-demo/manifests/progressive-delivery-demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api-test
  name: api-test
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: api-test
  template:
    metadata:
      labels:
        app: api-test
    spec:
      containers:
      - image: quay.io/andrleite/rollouts-demo:blue
        imagePullPolicy: Always
        name: api-test
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: 5m
            memory: 32Mi
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mesh
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - api-test.pismo.lab
    port:
      name: http
      number: 80
      protocol: HTTP
